--- a/doc/src/manual/ch-ana-sim.tex
+++ b/doc/src/manual/ch-ana-sim.tex
@@ -12,7 +12,7 @@ anything that's useful to get a full picture of what happened
 in the model during the simulation run.
 
 Output vectors are recorded from simple modules, by \cclass{cOutVector} objects
-(see section \ref{sec:ch-sim-lib:cOutVector}). Since output vectors usually
+(see section \ref{sec:ch-sim-lib:coutvector}). Since output vectors usually
 record a large amount of data, in \ttt{omnetpp.ini} you can disable vectors
 or specify a simulation time interval for recording
 (see section \ref{sec:ch-run-sim:outvectors-section}).
